--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -5,56 +5,13 @@
         %span.sr-only Toggle navigation
         %i.fa.fa-cog
       %a.navbar-brand.navbar-brand-img{:href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/index.html"}
-        %img{:alt => "MVP Ready", :src => "./Analytics Dashboard · MVP Ready_files/logo.png"}
+        %img{:alt => "Entherm", :src => "./Analytics Dashboard · MVP Ready_files/logo.png"}
     / /.navbar-header
     %nav.collapse.navbar-collapse{:role => "navigation"}
       %ul.nav.navbar-nav.navbar-left
         %li.dropdown.navbar-notification
-          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-notifications.html"}
-            %i.fa.fa-bell.navbar-notification-icon
-            %span.visible-xs-inline &nbsp;Notifications
-            %b.badge.badge-primary 3
-          .dropdown-menu
-            .dropdown-header &nbsp;Notifications
-            .slimScrollDiv{:style => "position: relative; overflow: hidden; width: auto; height: 225px;"}
-              .notification-list{:style => "overflow: hidden; width: auto; height: 225px;"}
-                %a.notification{:href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-notifications.html"}
-                  %span.notification-icon
-                    %i.fa.fa-cloud-upload.text-primary
-                  %span.notification-title Notification Title
-                  %span.notification-description Praesent dictum nisl non est sagittis luctus.
-                  %span.notification-time 20 minutes ago
-                / / .notification
-                %a.notification{:href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-notifications.html"}
-                  %span.notification-icon
-                    %i.fa.fa-ban.text-secondary
-                  %span.notification-title Notification Title
-                  %span.notification-description Lorem ipsum dolor sit amet, consectetur adipisicing elit...
-                  %span.notification-time 20 minutes ago
-                / / .notification
-                %a.notification{:href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-notifications.html"}
-                  %span.notification-icon
-                    %i.fa.fa-warning.text-tertiary
-                  %span.notification-title Storage Space Almost Full!
-                  %span.notification-description Praesent dictum nisl non est sagittis luctus.
-                  %span.notification-time 20 minutes ago
-                / / .notification
-                %a.notification{:href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-notifications.html"}
-                  %span.notification-icon
-                    %i.fa.fa-ban.text-danger
-                  %span.notification-title Sync Error
-                  %span.notification-description Lorem ipsum dolor sit amet, consectetur adipisicing elit...
-                  %span.notification-time 20 minutes ago
-                / / .notification
-              .slimScrollBar{:style => "width: 5px; position: absolute; top: 0px; opacity: 0.4; display: block; border-radius: 7px; z-index: 99; right: 1px; background: rgb(136, 136, 136);"}
-              .slimScrollRail{:style => "width: 5px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.2; z-index: 90; right: 1px; background: rgb(153, 153, 153);"}
-            / / .notification-list
-            %a.notification-link{:href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-notifications.html"} View All Notifications
-          / / .dropdown-menu
-        %li.dropdown.navbar-notification
-          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-notifications.html"}
+          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => ""}
             %i.fa.fa-envelope.navbar-notification-icon
-            %span.visible-xs-inline &nbsp;Messages
           .dropdown-menu
             .dropdown-header Messages
             .slimScrollDiv{:style => "position: relative; overflow: hidden; width: auto; height: 225px;"}
@@ -108,8 +65,6 @@
             %a.notification-link{:href => "https://jumpstartthemes.com/demo/v/3.0.0/templates/admin-1/page-notifications.html"} View All Alerts
           / / .dropdown-menu
       %ul.nav.navbar-nav.navbar-right
-        %li
-          %a{:href => "javsacript:;"} Projects
         %li
           %a{:href => "javascript:;"} Support
         %li.dropdown.navbar-profile
