--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,7 @@
  *= require analytics/stylesheets/bootstrap.min
  *= require analytics/stylesheets/base
  *= require analytics/stylesheets/mvpready-admin
+ *= require analytics/stylesheets/font-awesome.min
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  *= require jquery-ui/autocomplete
  */
